--- a/mobile-app/package.json
+++ b/mobile-app/package.json
@@ -16,6 +16,7 @@
     "@capacitor/app": "6.0.0",
     "@capacitor/core": "6.0.0",
     "@capacitor/haptics": "6.0.0",
+    "@capacitor/ios": "6.0.0",
     "@capacitor/keyboard": "6.0.0",
     "@capacitor/preferences": "^6.0.0",
     "@capacitor/status-bar": "6.0.0",
@@ -23,8 +24,8 @@
     "@ionic/vue-router": "^8.0.0",
     "axios": "^1.6.8",
     "ionicons": "^7.0.0",
-    "vue": "^3.3.0",
-    "vue-router": "^4.2.0"
+    "vue": "^3.4.24",
+    "vue-router": "^4.3.2"
   },
   "devDependencies": {
     "@capacitor/assets": "^3.0.5",
@@ -37,7 +38,7 @@
     "eslint": "^8.35.0",
     "eslint-plugin-vue": "^9.9.0",
     "jsdom": "^22.1.0",
-    "terser": "^5.4.0",
+    "terser": "^5.30.4",
     "typescript": "^5.1.6",
     "vite": "^5.0.0",
     "vite-plugin-mock": "^3.0.2",
