--- a/mobile-app/package.json
+++ b/mobile-app/package.json
@@ -34,10 +34,13 @@
     "@vitejs/plugin-vue": "^4.0.0",
     "@vue/eslint-config-typescript": "^12.0.0",
     "@vue/test-utils": "^2.3.0",
+    "autoprefixer": "^10.4.19",
     "cypress": "^13.5.0",
     "eslint": "^8.35.0",
     "eslint-plugin-vue": "^9.9.0",
     "jsdom": "^22.1.0",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.3",
     "terser": "^5.30.4",
     "typescript": "^5.1.6",
     "vite": "^5.0.0",
@@ -45,5 +48,5 @@
     "vitest": "^0.34.6",
     "vue-tsc": "^1.0.24"
   },
-  "description": "An Ionic project"
+  "description": "Monkeys Together Strong"
 }
