--- a/mobile-app/package.json
+++ b/mobile-app/package.json
@@ -35,6 +35,7 @@
     "@vue/eslint-config-typescript": "^12.0.0",
     "@vue/test-utils": "^2.3.0",
     "autoprefixer": "^10.4.19",
+    "axios-mock-adapter": "^1.22.0",
     "cypress": "^13.5.0",
     "eslint": "^8.35.0",
     "eslint-plugin-vue": "^9.9.0",
