--- a/mobile-app/package.json
+++ b/mobile-app/package.json
@@ -25,6 +25,7 @@
     "axios": "^1.6.8",
     "axios-mock-adapter": "^1.22.0",
     "ionicons": "^7.0.0",
+    "swiper": "^11.1.3",
     "vue": "^3.4.24",
     "vue-router": "^4.3.2"
   },
