--- a/backend/.env.production
+++ b/backend/.env.production
@@ -21,6 +21,6 @@ IGDB_ACCESS_TOKEN_URL=https://id.twitch.tv/oauth2/token
 # Postgres Database
 POSTGRES_SERVER=localhost
 POSTGRES_PORT=5432
-POSTGRES_DB=app
+POSTGRES_DB=mts_db
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=4444
