--- a/backend/.env.testing
+++ b/backend/.env.testing
@@ -24,6 +24,6 @@ IGDB_ACCESS_TOKEN=8mk3nwphwbef7lcvaqwm1htk50xdbx
 # Postgres Database
 POSTGRES_SERVER=localhost
 POSTGRES_PORT=5432
-POSTGRES_DB=app
+POSTGRES_DB=mts_db
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=4444
