--- a/mobile-app/.env.production
+++ b/mobile-app/.env.production
@@ -1,2 +1,2 @@
 VITE_USE_MOCKS=false
-VITE_API_BASE_URL=http://backend:5000
+VITE_API_BASE_URL=https://monkeys-together-strong-6be19d4d341e.herokuapp.com
