--- a/backend/.env.development
+++ b/backend/.env.development
@@ -19,7 +19,8 @@ USERS_OPEN_REGISTRATION=True
 IGDB_CLIENT_ID=c62corcm32sqp0i8mu4ysyotn75q48
 IGDB_CLIENT_SECRET=aom67zvht3eccwggffyp5f9qgaq5bo
 IGDB_ACCESS_TOKEN_URL=https://id.twitch.tv/oauth2/token
-IGDB_ACCESS_TOKEN=8mk3nwphwbef7lcvaqwm1htk50xdbx
+IGDB_ACCESS_TOKEN=5qfv8zf1e7vjgle2btn47rprgghw2e
+IGDB_ACCESS_TOKEN_EXPIRY=1723390394.1565194
 
 # SQLite Database
 SQLITE_FILE=sqlite:///./data/dev.db
