--- a/backend/.env.development
+++ b/backend/.env.development
@@ -19,6 +19,7 @@ USERS_OPEN_REGISTRATION=True
 IGDB_CLIENT_ID=c62corcm32sqp0i8mu4ysyotn75q48
 IGDB_CLIENT_SECRET=aom67zvht3eccwggffyp5f9qgaq5bo
 IGDB_ACCESS_TOKEN_URL=https://id.twitch.tv/oauth2/token
+# python -c 'from app.services.external.igdb_client import igdb_client; print(igdb_client.get_access_token())'
 IGDB_ACCESS_TOKEN=5qfv8zf1e7vjgle2btn47rprgghw2e
 IGDB_ACCESS_TOKEN_EXPIRY=1723390394.1565194
 
