--- a/mobile-app/package.json
+++ b/mobile-app/package.json
@@ -17,7 +17,7 @@
     "@capacitor/core": "6.1.0",
     "@capacitor/haptics": "6.0.0",
     "@capacitor/ios": "6.1.0",
-    "@capacitor/keyboard": "6.0.0",
+    "@capacitor/keyboard": "^6.0.0",
     "@capacitor/preferences": "^6.0.0",
     "@capacitor/status-bar": "6.0.0",
     "@ionic/vue": "^8.0.0",
