--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -5,17 +5,17 @@ annotated-types==0.7.0 ; python_version >= "3.11" and python_version < "4.0"
 anyio==4.4.0 ; python_version >= "3.11" and python_version < "4.0"
 attrs==23.2.0 ; python_version >= "3.11" and python_version < "4.0"
 bcrypt==4.1.3 ; python_version >= "3.11" and python_version < "4.0"
-certifi==2024.6.2 ; python_version >= "3.11" and python_version < "4.0"
+certifi==2024.7.4 ; python_version >= "3.11" and python_version < "4.0"
 charset-normalizer==3.3.2 ; python_version >= "3.11" and python_version < "4.0"
 click==8.1.7 ; python_version >= "3.11" and python_version < "4.0"
 colorama==0.4.6 ; python_version >= "3.11" and python_version < "4.0" and (sys_platform == "win32" or platform_system == "Windows")
 dnspython==2.6.1 ; python_version >= "3.11" and python_version < "4.0"
-email-validator==2.1.1 ; python_version >= "3.11" and python_version < "4.0"
+email-validator==2.2.0 ; python_version >= "3.11" and python_version < "4.0"
 fake-useragent==1.5.1 ; python_version >= "3.11" and python_version < "4.0"
 fastapi-cli==0.0.4 ; python_version >= "3.11" and python_version < "4.0"
 fastapi==0.111.0 ; python_version >= "3.11" and python_version < "4.0"
 frozenlist==1.4.1 ; python_version >= "3.11" and python_version < "4.0"
-greenlet==3.0.3 ; python_version >= "3.11" and python_version < "4.0" and (platform_machine == "aarch64" or platform_machine == "ppc64le" or platform_machine == "x86_64" or platform_machine == "amd64" or platform_machine == "AMD64" or platform_machine == "win32" or platform_machine == "WIN32")
+greenlet==3.0.3 ; python_version < "3.13" and (platform_machine == "aarch64" or platform_machine == "ppc64le" or platform_machine == "x86_64" or platform_machine == "amd64" or platform_machine == "AMD64" or platform_machine == "win32" or platform_machine == "WIN32") and python_version >= "3.11"
 h11==0.14.0 ; python_version >= "3.11" and python_version < "4.0"
 howlongtobeatpy==1.0.5 ; python_version >= "3.11" and python_version < "4.0"
 httpcore==1.0.5 ; python_version >= "3.11" and python_version < "4.0"
@@ -28,14 +28,14 @@ markdown-it-py==3.0.0 ; python_version >= "3.11" and python_version < "4.0"
 markupsafe==2.1.5 ; python_version >= "3.11" and python_version < "4.0"
 mdurl==0.1.2 ; python_version >= "3.11" and python_version < "4.0"
 multidict==6.0.5 ; python_version >= "3.11" and python_version < "4.0"
-orjson==3.10.5 ; python_version >= "3.11" and python_version < "4.0"
+orjson==3.10.6 ; python_version >= "3.11" and python_version < "4.0"
 passlib[bcrypt]==1.7.4 ; python_version >= "3.11" and python_version < "4.0"
-protobuf==5.27.1 ; python_version >= "3.11" and python_version < "4.0"
-psycopg-binary==3.1.19 ; implementation_name != "pypy" and python_version >= "3.11" and python_version < "4.0"
-psycopg[binary]==3.1.19 ; python_version >= "3.11" and python_version < "4.0"
-pydantic-core==2.18.4 ; python_version >= "3.11" and python_version < "4.0"
-pydantic-settings==2.3.3 ; python_version >= "3.11" and python_version < "4.0"
-pydantic==2.7.4 ; python_version >= "3.11" and python_version < "4.0"
+protobuf==5.27.2 ; python_version >= "3.11" and python_version < "4.0"
+psycopg-binary==3.2.1 ; implementation_name != "pypy" and python_version >= "3.11" and python_version < "4.0"
+psycopg[binary]==3.2.1 ; python_version >= "3.11" and python_version < "4.0"
+pydantic-core==2.20.1 ; python_version >= "3.11" and python_version < "4.0"
+pydantic-settings==2.3.4 ; python_version >= "3.11" and python_version < "4.0"
+pydantic==2.8.2 ; python_version >= "3.11" and python_version < "4.0"
 pygments==2.18.0 ; python_version >= "3.11" and python_version < "4.0"
 pyjwt==2.8.0 ; python_version >= "3.11" and python_version < "4.0"
 python-dotenv==1.0.1 ; python_version >= "3.11" and python_version < "4.0"
@@ -45,14 +45,14 @@ requests==2.32.3 ; python_version >= "3.11" and python_version < "4.0"
 rich==13.7.1 ; python_version >= "3.11" and python_version < "4.0"
 shellingham==1.5.4 ; python_version >= "3.11" and python_version < "4.0"
 sniffio==1.3.1 ; python_version >= "3.11" and python_version < "4.0"
-sqlalchemy==2.0.30 ; python_version >= "3.11" and python_version < "4.0"
+sqlalchemy==2.0.31 ; python_version >= "3.11" and python_version < "4.0"
 sqlmodel==0.0.19 ; python_version >= "3.11" and python_version < "4.0"
 starlette==0.37.2 ; python_version >= "3.11" and python_version < "4.0"
 typer==0.12.3 ; python_version >= "3.11" and python_version < "4.0"
 typing-extensions==4.12.2 ; python_version >= "3.11" and python_version < "4.0"
 tzdata==2024.1 ; python_version >= "3.11" and python_version < "4.0" and sys_platform == "win32"
 ujson==5.10.0 ; python_version >= "3.11" and python_version < "4.0"
-urllib3==2.2.1 ; python_version >= "3.11" and python_version < "4.0"
+urllib3==2.2.2 ; python_version >= "3.11" and python_version < "4.0"
 uvicorn==0.30.1 ; python_version >= "3.11" and python_version < "4.0"
 uvicorn[standard]==0.30.1 ; python_version >= "3.11" and python_version < "4.0"
 uvloop==0.19.0 ; (sys_platform != "win32" and sys_platform != "cygwin") and platform_python_implementation != "PyPy" and python_version >= "3.11" and python_version < "4.0"
