--- a/mobile-app/package.json
+++ b/mobile-app/package.json
@@ -17,7 +17,7 @@
     "@capacitor/core": "6.1.0",
     "@capacitor/haptics": "6.0.0",
     "@capacitor/ios": "6.1.0",
-    "@capacitor/keyboard": "^6.0.0",
+    "@capacitor/keyboard": "6.0.1",
     "@capacitor/preferences": "^6.0.0",
     "@capacitor/status-bar": "6.0.0",
     "@ionic/vue": "^8.0.0",
@@ -45,10 +45,10 @@
     "tailwindcss": "^3.4.3",
     "terser": "^5.30.4",
     "typescript": "^5.1.6",
-    "vite": "^5.0.0",
+    "vite": "~5.2.0",
     "vite-plugin-mock": "^3.0.2",
     "vitest": "^0.34.6",
-    "vue-tsc": "^1.0.24"
+    "vue-tsc": "^2.0.22"
   },
   "description": "Monkeys Together Strong"
 }
